zabbix/mysql-stateful.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql"
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0.19
        imagePullPolicy: IfNotPresent
        name: mysql
        args:
            - "--default-authentication-plugin=mysql_native_password"
            - --character-set-server=utf8
            - --collation-server=utf8_bin
        resources:
          requests:
            cpu: 0.2
            memory: 500Mi
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - name: mysql-config
            mountPath: /etc/mysql/conf.d/
          - name: mysql-data
            mountPath: /var/lib/mysql
          - name: timezone
            mountPath: /etc/localtime
      volumes:
        - name: mysql-config
          configMap:
            name: mysql-config
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/America/Sao_Paulo
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 5Gi
