zabbix/zabbix-server-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server
  template:
    metadata:
      labels:
        app: zabbix-server
    spec:
      containers:
        - name: zabbix-agent
          image: zabbix/zabbix-agent:6.0-ol-latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 10050
            name: zabbix-agent
          securityContext:
            privileged: true
        - name: zabbix-server
          image: zabbix/zabbix-server-mysql:6.0-ol-latest
          imagePullPolicy: IfNotPresent
          resources:
           requests:
            cpu: 100m
            memory: 500Mi
          ports:
          - containerPort: 10051
            name: server
            protocol: TCP
          securityContext:  
            privileged: true
          volumeMounts:
            - name: zabbix-secret
              mountPath: "/usr/lib/zabbix/alertscripts/slack.sh"
              subPath: slack.sh
            
            # Descomente para integração adicional
            #- name: zabbix-secret
            #  mountPath: "/usr/lib/zabbix/alertscripts/adicional.sh"
            #  subPath: adicional.sh

            # Descomente para monitoramento externo
            #- name: zabbix-secret
            #  mountPath: "/usr/lib/zabbix/externalscripts/external.sh"
            #  subPath: external.sh        
      volumes:
        - name: zabbix-secret
          secret:
           secretName: zabbix-secret
           defaultMode: 0755
           items:
           - key: slack.sh
             path: slack.sh
           #- key: external.sh
           #  path: external.sh
