zabbix/zabbix-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zabbixserver
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port:  10051
    protocol: TCP
    targetPort: 10051
  selector:
    app: zabbix-server
